[package]

name = "seed_hooks"
version = "0.1.2"
authors = ["rebo <rebotfc@gmail.com>"]
edition = "2018"
description = "Local state for Seed web apps"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html66========68

[dependencies]
seed = {path = "../rebo_seed"}
# seed = "^0.6.0"
# seed = {git = "https://github.com/seed-rs/seed.git"}
wasm-bindgen = "^0.2.55"
comp_state = { path = "../comp_state"} 
# comp_state = "0.2.7"
wasm-bindgen-futures = "0.4.5"
serde = { version = "^1.0.103", features = ['derive'] }
serde_json = "^1.0.44"
validator = "0.10.0"
validator_derive = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3.8" 

[dependencies.web-sys]
version = "^0.3.32"
features = [
  'HtmlElement',
]