[package]

name = "seed_hooks"
version = "0.1.2"
authors = ["rebo <rebotfc@gmail.com>"]
edition = "2018"
description = "Local state for Seed web apps"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html66========68

[dependencies]
seed = {git = "https://github.com/seed-rs/seed.git"}
# seed = "^0.6.0"
# seed = {path = "../rebo_seed"}

comp_state = "0.2.8"
# comp_state = { path = "../comp_state"} 

illicit = "0.9.2"
harsh = "0.1.6"
tw_seed_hooks = {path="tw_seed_hooks"}
lazy_static = "1.4.0"
wasm-bindgen = "^0.2.55"
ordered-float = "1.0.2"
anymap = "0.12.1" 
# wasm-bindgen-futures = "0.4.5"
# serde = { version = "^1.0.103", features = ['derive'] }
# serde_json = "^1.0.44"
# validator = "0.10.0"
# validator_derive = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3.8" 

[dependencies.web-sys]
version = "^0.3.36"
features = [
  'HtmlElement',
  "HtmlDocument",
  "HtmlCollection",
  "HtmlStyleElement",
]

