[package]

name = "seed_hooks"
version = "0.1.4"
authors = ["rebo <rebotfc@gmail.com>"]
edition = "2018"
description = "Local state for Seed web apps"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html66========68

[dependencies]
seed = "0.7.0"
# seed = "^0.6.0"
# seed = {path = "../rebo_seed"}

atomic_hooks = "0.1.0"
# atomic_hooks = { path = "../atomic_hooks"} 
# atomic_hooks = { path = "../atom_state"} 

lazy_static = "1.4.0"
wasm-bindgen = "^0.2.62"

derive_more = "0.99.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.12" 

[dependencies.web-sys]
version = "^0.3.39"
features = [
  'HtmlElement',
  "HtmlDocument",
  "HtmlCollection",
  "HtmlStyleElement",
]

