[package]
name = "tw_seed_hooks"
version = "0.1.0"
authors = ["rebo"]
edition = "2018"
autotests = false
publish = false


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.17",  features = ["full"]}
quote = "1.0.3"
proc-macro2 = "1.0.10"
heck = "0.3.1"